# quiz-taking-app

./: .gitignore  CMakeLists.txt  Documentation.md  Functional_Reference.md  README.md  classes.h  exam2.txt  exam2_questions.txt  globals.h  indexer.h  main.cpp  menus.h  quiz-taking-app.cbp  quiz-taking-app.depend  quiz-taking-app.layout  utils.h
structures/: index.h  log.h  question.h  quiz.h  user.h
tests/: acutest.h  misc.test.cpp  string.test.cpp  test-index.h  test-main.h
utils/: file.h  index.h  io.h  log.h  misc.h  question.h  quiz.h  string.h  user.h
